added remove route,updated swggaer.yaml
