# routes/course.js
@@ -1,5 +1,5 @@
 const express = require("express")
-const { createCourse, getAllCourses, getCourse,updateCourse } = require("../controllers/courseController")
+const { createCourse, getAllCourses, getCourse,updateCourse, removeCourse } = require("../controllers/courseController")
 const {getCourseById} = require("../middlewares/course")
 const router = express.Router()
 
@@ -11,5 +11,6 @@ router.route("/course/create").post(createCourse)
 router.route("/courses/all").get(getAllCourses)
 router.route("/course/:courseId/info").get(getCourse)
 router.route("/course/:courseId/update").put(updateCourse)
+router.route("/course/:courseId/delete").delete(removeCourse)
 
 module.exports = router
